# local_proxy

./: .gitignore  INSTALLATION.md  LICENSE  README.md  local_proxy.env.example  pyproject.toml
.github/workflows/: test.yml
deploy/: com.fexperts.local-proxy.plist.example
docs/: MEDIUM_ARTICLE.md
local_proxy/: __init__.py  __main__.py  certs.py  cli.py  config.py  gui.py  gui_helpers.py  logging_setup.py  proxy.py  service.py
scripts/: publish-github.sh
tests/: test_local_proxy.py
tunnel/: __init__.py  client.py  gui.py  protocol.py  server.py
